--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,18 @@ li a:hover {
   background-color: #ccc !important;
 }
 
+/* Horizontal line */
+
+.horizontal-line{
+  width: 100%;
+  height: 20px;
+  border-bottom: 1px solid black;
+  text-align:center;
+
+}
+.line {
+  padding-top: 50px;
+}
 /* Navbar */
 
 
@@ -131,3 +143,5 @@ li a:hover {
     color: #000;
     font-family: 'Open Sans', sans-serif;
 }
+
+/* Flexbox grid layout */
