--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@ li a:hover {
 }
 
 .target-groups {
-  padding-top: 150px !important; 
+  padding-top: 130px !important;
 }
 
 @media (min-width: 1700px) {
@@ -154,23 +154,18 @@ li a:hover {
 .flex-column {
     flex-direction: column;
     display: flex;
-
-
 }
 
 .flex-body {
     display: flex;
     padding-top: 40px;
     justify-content: center;
-
-
 }
 
 .flex-body div:not([class*="flex"]) {
     border: 1px solid white;
     flex: 1 1 200px;
     width: 300px;
-
 }
 
 #content{
@@ -179,6 +174,28 @@ li a:hover {
   margin-right: auto;
   position:relative;
   top:50%;
+}
+
+/* Styles for every grid button */
+.grid-button {
+  background: #6d7993;
+  cursor: pointer;
+}
+
+/* Top padding in group icons */
+.mobile {
+  padding-top: 15px;
+}
+
+/* Class for responsive flexbox grid */
+@media (max-width: 1000px) {
+  .flex-body {
+    flex-direction: column;
+  }
+  .flex-column {
+    flex-direction: row;
+  }
 
 }
+
 /**/
