--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,9 +33,7 @@ I will show you how to change a height of a standard Bootstrap navbar.
 
 /* Button Shading */
 
-li a:hover {
-  background-color: #ccc !important;
-}
+
 
 /* Horizontal line */
 
@@ -262,7 +260,7 @@ li a:hover {
   clear: both;
   font-weight: normal;
   line-height: 1.428571429;
-  color: #999;
+  color: #333;
   white-space: normal;
 }
 
@@ -270,7 +268,6 @@ li a:hover {
 .mega-dropdown-menu > li ul > li > a:focus {
   text-decoration: none;
   color: #444;
-  background-color: #f5f5f5;
 }
 
 .mega-dropdown-menu .dropdown-header {
@@ -297,4 +294,62 @@ li a:hover {
 
 .list-el {
     padding-top: 10px;
+    color: black;
+}
+
+.list-el a {
+    padding-top: 10px;
+    color: #444;
+}
+
+.list-el a:hover {
+    padding-top: 10px;
+    color: #111;
+}
+
+footer {
+  background-color: #333;
+  margin-top: 80px;
+}
+
+.row {
+  margin-right: 0px !important;
+}
+
+.footer-item {
+  color: #ddd;
+  padding-top: 20px;
+  font-size: 13px;
+}
+
+.divider {
+   border-bottom: 1px solid rgba(255,255,255,0.05);
+}
+
+.footer-header {
+  font-size: 18px;
+  font-weight: bold;
+  color: #aaa;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+
+.section-title {
+  color: #666;
+  font-weight: bold;
+}
+
+.section-title a {
+  text-decoration: none;
+  color: #666;
+}
+
+.footer-item a {
+  text-decoration: none !important;
+  color: #ddd;
+}
+
+.footer-item a:hover {
+  text-decoration: none !important;
+  color: #bbb;
 }
