--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,8 +198,6 @@ I will show you how to change a height of a standard Bootstrap navbar.
 
 /* MEGA MENU */
 
-
-
 .navbar-nav>li>.dropdown-menu {
   margin-top: 20px;
   border-top-left-radius: 4px;
@@ -258,9 +256,9 @@ I will show you how to change a height of a standard Bootstrap navbar.
   display: block;
   padding: 3px 20px;
   clear: both;
-  font-weight: normal;
+  font-weight: 800;
   line-height: 1.428571429;
-  color: #333;
+  color: #111;
   white-space: normal;
 }
 
@@ -271,8 +269,8 @@ I will show you how to change a height of a standard Bootstrap navbar.
 }
 
 .mega-dropdown-menu .dropdown-header {
-  color: #428bca;
-  font-size: 18px;
+  color: #bbb;
+  font-size: 24px;
   font-weight: bold;
 }
 
