--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
     border-radius: 0;
     min-height: 80px;
 }
+
 /*
 
 I will show you how to change a height of a standard Bootstrap navbar.
@@ -211,11 +212,16 @@ I will show you how to change a height of a standard Bootstrap navbar.
 .mega-dropdown {
   position: static !important;
   width: 100%;
+
 }
 
 .mega-dropdown-menu {
   padding: 20px 0px;
   width: 100%;
+  height: auto;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden; /* make it scrollable */
   box-shadow: none;
   -webkit-box-shadow: none;
 }
@@ -347,4 +353,80 @@ footer {
 .divider-header {
   border: 1px solid #aaa;
   /*box-shadow: 0 20px 20px -20px #333 !important;*/
+}
+
+/*news*/
+.glyphicon
+{
+    margin-right:4px !important; /*override*/
+}
+
+.pagination .glyphicon
+{
+    margin-right:0px !important; /*override*/
+}
+
+.pagination a
+{
+    color:#555;
+}
+
+.panel ul
+{
+    padding:0px;
+    margin:0px;
+    list-style:none;
+
+}
+
+.news-item
+{
+    padding:4px 4px;
+    margin:0px;
+    border-bottom:1px dotted #555; 
+    background-color:white;
+
+}
+
+#jquery-script-menu {
+position: fixed;
+height: 90px;
+width: 100%;
+top: 0;
+left: 0;
+border-top: 5px solid #316594;
+background: #fff;
+-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+z-index: 999999;
+padding: 10px 0;
+-webkit-box-sizing:content-box;
+-moz-box-sizing:content-box;
+box-sizing:content-box;
+}
+
+.jquery-script-center {
+width: 960px;
+margin: 0 auto;
+}
+.jquery-script-center ul {
+width: 212px;
+float:left;
+line-height:45px;
+margin:0;
+padding:0;
+list-style:none;
+}
+.jquery-script-center a {
+  text-decoration:none;
+}
+.jquery-script-ads {
+width: 728px;
+height:90px;
+float:right;
+}
+.jquery-script-clear {
+clear:both;
+height:0;
 }
