--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,7 +233,7 @@ I will show you how to change a height of a standard Bootstrap navbar.
 
 .mega-dropdown-menu:after {
   content: "";
-  
+
 }
 
 .mega-dropdown-menu > li > ul {
@@ -383,50 +383,66 @@ footer {
 {
     padding:4px 4px;
     margin:0px;
-    border-bottom:1px dotted #555; 
+    border-bottom:1px dotted #555;
     background-color:white;
 
 }
 
 #jquery-script-menu {
-position: fixed;
-height: 90px;
-width: 100%;
-top: 0;
-left: 0;
-border-top: 5px solid #316594;
-background: #fff;
--moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
--webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
-z-index: 999999;
-padding: 10px 0;
--webkit-box-sizing:content-box;
--moz-box-sizing:content-box;
-box-sizing:content-box;
+  position: fixed;
+  height: 90px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-top: 5px solid #316594;
+  background: #fff;
+  -moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+  z-index: 999999;
+  padding: 10px 0;
+  -webkit-box-sizing:content-box;
+  -moz-box-sizing:content-box;
+  box-sizing:content-box;
 }
 
 .jquery-script-center {
-width: 960px;
-margin: 0 auto;
+  width: 960px;
+  margin: 0 auto;
 }
 .jquery-script-center ul {
-width: 212px;
-float:left;
-line-height:45px;
-margin:0;
-padding:0;
-list-style:none;
+  width: 212px;
+  float:left;
+  line-height:45px;
+  margin:0;
+  padding:0;
+  list-style:none;
 }
 .jquery-script-center a {
   text-decoration:none;
 }
 .jquery-script-ads {
-width: 728px;
-height:90px;
-float:right;
+  width: 728px;
+  height:90px;
+  float:right;
 }
 .jquery-script-clear {
-clear:both;
-height:0;
+  clear:both;
+  height:0;
+}
+
+div.row.footer2 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 20px;
+}
+
+a.footer-link {
+  text-decoration: none;
+  color: #666;
+}
+
+a.footer-link:hover {
+  color: white;
+  text-decoration: none;
 }
