--- a/styles/styles.css
+++ b/styles/styles.css
@@ -445,3 +445,16 @@ a.footer-link:hover {
   color: white;
   text-decoration: none;
 }
+h2 {
+  width:100%;
+  text-align:center;
+  border-bottom: 1px solid #000;
+  line-height:0.1em;
+  margin:10px 0 20px;
+  padding-top: 20px;
+}
+
+h2 span {
+  background:#fff;
+  padding:0 20px;
+}
