--- a/styles/styles.css
+++ b/styles/styles.css
@@ -824,3 +824,17 @@ margin-top: 50px;
     padding-top: 15px;
     font-size: 40px;
 }
+
+.pull-right {
+  padding-left: 10px !important;
+}
+
+/* Profile container */
+.profile-container {
+  padding-bottom: 50px;
+  padding-top: 20px;
+  margin-top: 180px;
+  margin-bottom: 150px;
+  border: 1px solid #AAA;
+  width:900px;
+}
